k8s/kyverno/tests/require-run-as-non-root/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-run-as-non-root
policies:
  - ../../cluster-policies.yaml
resources:
  - resources.yaml
results:
  - policy: require-run-as-non-root
    resources:
      - university-ecosystem/compliant-pod
    kind: Pod
    result: pass
  - policy: require-run-as-non-root
    resources:
      - university-ecosystem/root-pod
    kind: Pod
    result: fail
